fix white space

--- a/app/assets/stylesheets/surety.less
+++ b/app/assets/stylesheets/surety.less
@@ -583,3 +583,7 @@ table.vtop {
 .filter-item option {
   padding: 0;
 }
+
+.log code {
+  white-space: pre;
+}
